--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Urs: Quantum Type System",
   "main": "",
   "scripts": {
-    "start": "pug -O ./framework.js ./foundations",
+    "start": "pug -O ./framework.js ./foundations index.pug",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
