--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,4 @@
 *.html linguist-detectable=false
 *.sh linguist-detectable=false
 *.pug linguist-detectable=false
-*.ur linguist-detectable=false
+*.urs linguist-detectable=false
